<resources>
    <string name="app_name">News Snips</string>
    <string name="snackbar_text">Click  the News to know more</string>
    <string name="snackbar_text_result">No Results Found,Please Retry</string>
    <string name="snackbar_action">Dismiss</string>
    <string name="snackbar_action_setting">Settings</string>
    <string name="snackbar_text_noInternet">No or Low Internet Connection</string>
    <string name="snackbar_text_noResult">No Results Found</string>

    <string name="show_more">Show More</string>
    <string name="settings_menu_item">Settings</string>
    <string name="home_menu_item">Settings</string>

    <string name="settings_category_label">Category</string>
    <string name="settings_category_world_label">World</string>
    <string name="settings_category_sport_label">Sports</string>
    <string name="settings_category_football_label">Football</string>
    <string name="settings_category_opinion_label">Opinion</string>
    <string name="settings_category_culture_label">Culture</string>
    <string name="settings_category_business_label">Business</string>
    <string name="settings_category_lifestyle_label">LifeStyle</string>
    <string name="settings_category_fashion_label">Fashion</string>
    <string name="settings_category_environment_label">Environment</string>
    <string name="settings_category_tech_label">Technology</string>
    <string name="settings_category_travel_label">Travel</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="news_intro">Your Daily Dose of News</string>
</resources>
